2022-02-28  Pascal Abresch  <nep@packageloss.eu>

        FTP EPLF does not handle directory
        https://bugs.webkit.org/show_bug.cgi?id=45113

        Reviewed by Darin Adler.

        The code used "!result.type" to check for an invalid type. However,
        the first type in the FTPEntryType enum is FTPDirectoryEntry, so this
        was actually returning true for directories, turning them into "junk"
        entries which would not be listed.

        Since the code for EPLF can only result in either files, directories,
        or uninitialized/junk entries, the check can be removed, returning
        result.type is the correct thing to do in all 3 cases.
    
        * http/tests/misc/ftp-eplf-directory-expected.txt: Added.
        * http/tests/misc/ftp-eplf-directory.py: Added.
        * platform/gtk/TestExpectations:

2022-02-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        [ATSPI] Always expose table cells (layout and CSS) that have rendered text content
        https://bugs.webkit.org/show_bug.cgi?id=237204

        Reviewed by Adrian Perez de Castro.

        * accessibility/gtk/nested-block-element-children-expected.txt: Rebaseline.
        * platform/glib/TestExpectations: Remove accessibility/generated-content-with-display-table-crash.html.
        * platform/gtk/TestExpectations: Remove accessibility/gtk/nested-block-element-children.html.

2022-02-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][a11y] Test accessibility/gtk/xml-roles-exposed.html is failing since ATSPI switch
        https://bugs.webkit.org/show_bug.cgi?id=237202

        Reviewed by Adrian Perez de Castro.

        * platform/gtk/TestExpectations: Remove accessibility/gtk/xml-roles-exposed.html.
        * platform/gtk/accessibility/gtk/xml-roles-exposed-expected.txt: Rebaseline.

2022-02-27  Jonathan Bedard  <jbedard@apple.com>

        webkitpy: WebSocket server doesn't support Python 3
        https://bugs.webkit.org/show_bug.cgi?id=230319