@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- webkit-test-runner [ ScrollAnimatorEnabled=false ] -->
+<!DOCTYPE html>
 <html>
     <head>
         <style>
