@@ -1,4 +1,3 @@
-<!DOCTYPE html> <!-- webkit-test-runner [ ScrollAnimatorEnabled=false ] -->
 <html>
     <head>
         <script src="../../resources/js-test-pre.js"></script>
