@@ -1,3 +1,13 @@
+2022-02-28  Simon Fraser  <simon.fraser@apple.com>
+
+        Revert r290548
+        
+        It caused three tests to start failing.
+
+        * rendering/RenderLayerScrollableArea.cpp:
+        (WebCore::RenderLayerScrollableArea::scrollAnimatorEnabled const): Deleted.
+        * rendering/RenderLayerScrollableArea.h:
+
 2022-02-28  Antoine Quint  <graouts@webkit.org>
 
         [web-animations] web-animations/interfaces/Animatable/getAnimations.html is a unique failure
